Revision history for {{$dist->name}}

{{$NEXT}}
 - Add ::ResultSet::Shortcut::Search (Closes GH#44 and GH#47) (Thanks moltar!)

2.027001  2015-05-16 11:47:15-05:00 America/Chicago
 - Fix missing POD in ::ResultSet::Explain

2.027000  2015-05-08 19:35:13-05:00 America/Chicago
 - Add ::Verifier::Parent

2.026000  2015-05-02 00:27:28-05:00 America/Chicago
 - Add new ::Schema::Verifier framework
 - ... including inaugural ::Verifier::C3

2.025003  2015-04-06 16:28:20-05:00 America/Chicago
 - Make ::OnColumnChange always allow mutating values before update
 - Fix documented args for `after_column_change`
 - Document ::OnColumnChange semantics a little bit more clearly

2.025002  2015-03-21 00:03:43-05:00 America/Chicago
 - Migrate ::RS::CorelateRelationship to an importable Util
 - Correctly set a parent class for all helpers

2.025001  2015-02-28 09:53:36-06:00 America/Chicago
 - fix ::RS::Errors test on Windows

2.025000  2015-02-20 22:50:47-06:00 America/Chicago
 - Add ::Helper::ResultSet::Errors to help when calling Result methods on an RS

2.024001  2014-11-25 19:16:41-06:00 America/Chicago
 - Fix ::DidYouMean to override source instead of resultset (Thanks ribasushi
   for the bug report!)

2.024000  2014-11-02 09:02:44-06:00 America/Chicago
 - Add ::Helper::Schema::DidYouMean to help with typos when calling ->resultset

2.023007  2014-09-16 19:48:34-05:00 America/Chicago
 - Fix ::Helper::ResultSet::DateMethods1 for Oracle (thanks Alexander Hartmaier!)
 - Fix yet another issue with ->copy and proxied ResultSet methods (thanks again
   moltar!)

2.023006  2014-09-03 17:44:34-05:00 America/Chicago
 - Fix a few ::DateMethods1 methods when using a bound date (vs a column)

2.023005  2014-08-10 11:05:27-05:00 America/Chicago
 - Fix ::Row::SelfResultSet to correctly include CSA (Thanks Steve Kleiman!)

2.023004  2014-08-01 18:27:54-05:00 America/Chicago
 - Fix implementation of ::Row::SelfResultSet (fixes GH#34, thanks ribasushi for
   the heads up!)
