@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Add ::Verifier::RelationshipColumnName (Thanks for the idea mcsnolte!)
  - Add ::ResultSet::Shortcut::Search (Closes GH#44 and GH#47) (Thanks moltar!)
 
 2.027001  2015-05-16 11:47:15-05:00 America/Chicago
